# nano-CAT

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.rst  LICENSE.md  NOTICE  README.md  README.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml
nano-CAT/: __init__.py
nanoCAT/: README.rst  __init__.py  __version__.py  asa.py  cdft.py  cone_angle.py  crs.py  dataclass.py  ligand_bde.py  ligand_solvation.py  mol_bulk.py  qd_opt_ff.py
nanoCAT/abc/: dataclass.py  file_container.py
nanoCAT/asa/: asa.py  asa_frag.py  energy_gatherer.py  md_asa.py
nanoCAT/bde/: __init__.py  bde_workflow.py  construct_xyn.py  dissociate_xyn.py  dissociate_xyn_v2.py  guess_core_dist.py  identify_surface.py
nanoCAT/bulk/: __init__.py  mol_graph.py  mol_graph2.py
nanoCAT/core_construct/: __init__.py  get_miller.py  parse_miller.py
nanoCAT/crs/: __init__.py  _csv_utils.py  _fast_sigma.py  _inner_loop.py  _main.py
nanoCAT/data/: uff.csv
nanoCAT/ff/: __init__.py  cp2k_utils.py  ff_anionic.py  ff_assignment.py  ff_cationic.py  match_interface.py  (+5 more)
nano_CAT/: __init__.py  ligand_bde.py
tests/: __init__.py  _test_mol_bulk.py  test_bde_workflow.py  test_bulk.py  test_bulk_recipe.py  test_cone_angle.py  test_coordination_number.py  test_dissociate_xyn.py  test_dissociation_recipe.py  test_fast_sigma_recipe.py  test_guess_core_dist.py  test_identify_surface.py  test_lint.py  test_mark_surface.py  test_md_asa.py  test_mol_bulk.py  test_mol_topology.py  test_prm.py  test_psf.py  test_surface_dissociation.py  test_uff.py
(+79 files in other folders)
