[metadata]
description_file = README.rst
license_file = LICENSE.md

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = nanoCAT

[flake8]
ignore =
    E226
    E704
    E711
    E731
    W503
    W504
max-line-length = 100

[tool:pytest]
testpaths = tests
addopts = --tb=short --cov --cov-report xml --cov-report term --cov-report html
markers = slow: A marker for slow tests.
filterwarnings =
    ignore::DeprecationWarning:numpy.distutils.*

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html
